trunk/Archive2/9d/51f3fdacb4d933/output
main.cpp:20:9: error: no matching function for call to 'modify'
        modify(modify(T()));
               ^~~~~~
main.cpp:13:3: note: candidate function not viable: expects an l-value for 1st argument
T modify(T &t) 
  ^
1 error generated.
